Skip to content

VLC won't use mp4a audio codec for transcoding

Since ffmpeg made AAC codec experimental and thus requires "-strict experimental" flag to use it, VLC refuses to use mp4a codec for transcoding. This is the output:

Codec is experimental but experimental codecs are not enabled, see -strict -2
[0x7f6a24001028] avcodec encoder error: cannot open encoder
[0x7f6a24001028] main encoder error: Streaming / Transcoding failed
[0x7f6a24001028] main encoder error: VLC could not open the encoder.
[0x7f6a34002478] stream_out_transcode stream out error: cannot find audio encoder (module:any fourcc:mp4a).

This is the line I start VLC with:

cvlc filename --play-and-exit --sout '#transcode{vcodec=h264,vb=600,scale=1.0,acodec=mp4a,ab=64,channels=2}:standard{access=http,mux=ts,dst==192.168.1.100:46232}'

Thank you.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information