avcodec: Allow encoding standard stricted to be from -2 to 2

Should fix #6184 as aac encoding seems to require --sout-ffmpeg-strict=-2